实验数据和结果/GenProg4Java/Codec/16b/logSeed9.txt
0 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
30 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
#Wed Feb 10 01:17:59 CST 2021
negativeTestWeight=2.0
classSourceFolder=/home/rtx/repair/d4j/Codec/16b/target/classes
model=default
sampleStrategy=variant
srcClassPath=/home/rtx/repair/d4j/Codec/16b/target/classes
sourceVersion=1.8
popsize=40
regenPaths=false
posCoverageFile=coverage.path.pos
continue=false
edits=APPEND;DELETE;REPLACE
negCoverageFile=coverage.path.neg
workingDir=/home/rtx/repair/d4j/Codec/16b/
clearTestCache=false
skipFailedSanity=false
sample=0.1 
oracleGenome=
testGranularity=class
justTestingFaultLoc=false
faultLocStrategy=standardPathFile
crossp=0.5
pMutation=1
generations=10
positiveTests=/home/rtx/repair/d4j/Codec/16b/pos.tests
javaVM=/home/rtx/java/jdk1.8.0_271/jre/bin/java
seed=9
negativePathWeight=0.35
compileCommand=
fixStrategy=classScope
allowCoverageFail=false
targetClassName=/home/rtx/repair/d4j/Codec/16b/bugfiles.txt
javaRuntime=java.lang.Runtime@6576fe71
classTestFolder=
modelPath=OVERALLModel.txt
sanity=yes
positivePathWeight=0.65
jacocoPath=/home/rtx/eclipse-workspace/genprog4java/lib/jacocoagent.jar
negativeTests=/home/rtx/repair/d4j/Codec/16b/neg.tests
pathToFileHumanInjectedFaultLoc=fileHumanInjectedFaultLoc.txt
outputDir=/home/rtx/repair/d4j/Codec/16b/genprog4java/variantSeed9/
testClassPath=/home/rtx/repair/d4j/Codec/16b/target/classes\:/home/rtx/repair/d4j/Codec/16b/src/main/resources\:/home/rtx/repair/d4j/Codec/16b/target/tests\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/d4j/Codec/16b/src/main/resources/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar
faultStrategy=classScope
sourceDir=src/main/java
checkSpace=false
search=gp
globalExtension=.java
faultSpaceSubSet=1/5
maxVariants=50
libs=/home/rtx/eclipse-workspace/genprog4java/lib/junittestrunner.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/commons-cli-20040117.000000.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/junit-4.12.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/hamcrest-core-1.3.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/log4j-1.2.17.jar\:/home/rtx/repair/d4j/Codec/16b/target/classes\:/home/rtx/repair/d4j/Codec/16b/src/main/resources\:/home/rtx/repair/d4j/Codec/16b/target/tests\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/d4j/Codec/16b/src/main/resources/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/d4j/Codec/16b/target/classes
crossover=onepoint
128 [main] INFO clegoues.genprog4java.main.Main  - Configuration file loaded
Deserialized fitnessCache HashMap
18581 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - loaded from source clegoues.genprog4java.java.ClassInfo@9dded48c
18582 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking begins
19360 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 1 out of 2
19726 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

19726 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 2 out of 2
20091 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

20091 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - 	n1: 
20347 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - false (0)

20348 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking completed (time taken = 1766)
20348 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Start Fault Localization
20383 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Finish Fault Localization
20384 [main] INFO clegoues.genprog4java.Search.Search  - search: genetic algorithm begins

20513 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 original (stored at: )
20712 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/codec/binary/Base32.java:479: error: unreachable statement
                    break;
                    ^
1 error

20712 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtReplace(151,132) at variant0 fails to compile

20712 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(151,132) (stored at: variant0)
21121 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(127,157) (stored at: variant1)
21127 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(127) (stored at: )
21131 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(180) (stored at: )
21137 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(104) (stored at: )
21230 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/codec/binary/Base32.java:350: error: cannot find symbol
            if (b == pad) {
                ^
  symbol:   variable b
  location: class Base32
org/apache/commons/codec/binary/Base32.java:356: error: cannot find symbol
                if (b >= 0 && b < this.decodeTable.length) {
                    ^
  symbol:   variable b
  location: class Base32
org/apache/commons/codec/binary/Base32.java:356: error: cannot find symbol
                if (b >= 0 && b < this.decodeTable.length) {
                              ^
  symbol:   variable b
  location: class Base32
org/apache/commons/codec/binary/Base32.java:357: error: cannot find symbol
                    final int result = this.decodeTable[b];
                                                        ^
  symbol:   variable b
  location: class Base32
4 errors

21230 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(51,142) at variant2 fails to compile

21231 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(51,142) (stored at: variant2)
21341 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/codec/binary/Base32.java:306: error: unreachable statement
            System.arraycopy(lineSeparator, 0, this.lineSeparator, 0, lineSeparator.length);
            ^
1 error

21342 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(33,40) at variant3 fails to compile

21342 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(33,40) (stored at: variant3)
21797 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(72,113) (stored at: variant4)
21802 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 6.0 StmtDelete(40) (stored at: )
21802 [main] INFO clegoues.genprog4java.Search.Search  - 
Repair Found: StmtDelete(40) (in )

21914 [main] INFO clegoues.genprog4java.fitness.Fitness  - Serialized test cache to file testcache.ser
21914 [main] INFO clegoues.genprog4java.main.Main  - 
Total elapsed time: 21

